# moduleprofiler

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: documentation.md  index.md  license.md  reference.md  tutorial.md
docs/modules/: conv1d.md  conv2d.md  convtranspose1d.md  convtranspose2d.md  gru.md  grucell.md  layernorm.md  linear.md  lstm.md  lstmcell.md  relu.md  sigmoid.md  softmax.md  tanh.md
docs/stylesheets/: extra.css
documentation/: index.html
license/: index.html
modules/conv1d/: index.html
modules/conv2d/: index.html
modules/convtranspose1d/: index.html
modules/convtranspose2d/: index.html
modules/gru/: index.html
modules/grucell/: index.html
modules/layernorm/: index.html
modules/linear/: index.html
modules/lstm/: index.html
modules/lstmcell/: index.html
modules/relu/: index.html
modules/sigmoid/: index.html
modules/softmax/: index.html
modules/tanh/: index.html
reference/: index.html
search/: search_index.json
src/moduleprofiler/: __init__.py  io_shapes.py  io_size.py  logger.py  ops.py  profiler.py  utils.py
tests/: test_ops_torch_linear.py  test_torch_conv1d_ops.py  test_torch_conv2d_ops.py  test_torch_gru_ops.py  test_torch_grucell_ops.py  test_torch_linear_ops.py  test_torch_lstmcell_ops.py
tutorial/: index.html
