[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "moduleprofiler"
authors = [{name = "Esteban Gómez", email = "esteban.gomezmellado@aalto.fi"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
    "pandas >= 2.0.0"
]

[project.urls]
Home = "https://github.com/eagomez2/moduleprofiler"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocstrings-python>=1.10.8",
    "mkdocs-material>=9.5.31"
]
test = [
    "pytest>=7.4.3"
]
lint = [
    "ruff>=0.1.9"
]

[tool.ruff]
extend-select = [
    "C4",
    "SIM",
    "TCH"
]
ignore-init-module-imports = true
line-length = 79