[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "moduleprofiler"
authors = [{name = "Esteban Gómez", email = "esteban.gomezmellado@aalto.fi"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["pytorch", "machine-learning", "neural-network", "profiling", "complexity-analysis"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
    "torch >= 2.3.0",
    "pandas >= 2.0.0",
    "psutil >= 6.0.0",
    "tqdm >= 4.66.5"
]

[project.urls]
"Bug Tracker" = "https://github.com/eagomez2/moduleprofiler/issues"
Changelog = "https://github.com/eagomez2/moduleprofiler/releases"
Documentation = "https://eagomez2.github.io/moduleprofiler/"
Home = "https://github.com/eagomez2/moduleprofiler"
Repository = "https://github.com/eagomez2/moduleprofiler"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocstrings-python>=1.10.8",
    "mkdocs-material>=9.5.31"
]
test = [
    "pytest>=7.4.3"
]
lint = [
    "ruff>=0.1.9"
]

[tool.ruff]
extend-select = [
    "C4",
    "SIM",
    "TCH"
]
ignore-init-module-imports = true
line-length = 79